304, 363 slides and videos 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -278,19 +278,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->OS support for RS-232, Huffman coding, Power over RS-232<!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0327.pdf"><!-- -->
-	  3/27<!-- -></a><!-- --><br><!-- -<a href=
+	  3/27<!-- --></a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0329.pdf"><!-- -->
       3/29<!-- -</a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0331.pdf"><!-- -->
       3/31<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Do26ZnJB5Tk">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=SsSOc1fWUq4">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=WsLm9wu8Z3g">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Sync. clocks defined, Manchester code, Evolution of Ethernet<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
