Slides, video for 304 today 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM

--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -280,18 +280,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/258112332/download?download_frd=1"><!-- -->
-	  3/27<!-- --></a><!-- --><br><!-- -<a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/29<!-- -</a><!-- --><br><!-- -><a href=
+	  3/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/258269728/download?download_frd=1"><!-- -->
+      3/29<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       3/31<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=SsSOc1fWUq4">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=C_rRtX1vCM8">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=WsLm9wu8Z3g">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Sync. clocks defined, Manchester code, Evolution of Ethernet <!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Ethernet oscillographs, PoE variants, Wi-Fi (based on Ethernet)<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
