--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -297,7 +297,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
 	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  4/03<!-- -></a><!-- --><br><!-- -<a href=
+	  4/03<!-- -></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       4/05<!-- -</a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
