slides and videos for 304, 363, for today 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -104,7 +104,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Intro., Web page tour, Homework, Channel Capacity <font color=grey>First day of class.</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><b>Ch. 1</b>, Intro., Web page tour, Homework, Ch. Capacity <font color=grey>(1st day of class.)</font><!--end comment--></td>  
    </TR><!-- Week of 1/16 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -120,7 +120,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=NGF0bnTidGk">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Channel model, Experiment v. theory, signal models, intro matlab<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment-->Matlab & Matrix multiplication, common signals, two sinc functions<!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Matlab & Matrix multiplication, <b>Ch. 2</b>, common signals, two sinc functions<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Symmetry (even, odd, Hermitian), power (watts v. watts relative to 1 &Omega;) <!--end comment--></td>  
    </TR><!-- Week of 1/23 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -206,7 +206,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->F.T.: Duality, Linearity, Symmetry, time, freq shift, Mod, deriv, integration <!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->F.T.: Energy Spectrum, Parseval, Conv in time mult in freq, Autocorr<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><b>Ch. 3 AM</b>  Intro to DSB-LC, Spectrum of DSB-SC, Autotune<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><b>Ch. 3 AM</b>,  Intro to DSB-LC, Spectrum of DSB-SC, Autotune<!--end comment--></td>  
    </TR><!-- Week of 2/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
@@ -281,17 +281,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/258101791/download?download_frd=1"><!-- -->
 	  3/27<!-- --></a><!-- --><br><!-- -<a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/29<!-- -</a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/31<!-- -></a><!-- --></td>
+      3/29<!-- -</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/258457610/download?download_frd=1"><!-- -->
+      3/31<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=7nqTSdgaWUg">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=WsLm9wu8Z3g">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=JNl47793aJw">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->SSB demod via carrier injection (BFO), analytic signals, hearing loop<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #2.</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><b>Ch. 4 FM</b>, Intro to FM, How radio signals "look", Comparison, AM vs. FM<!--end comment--></td>  
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
