--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -282,17 +282,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0327.pdf"><!-- -->
 	  3/27<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0329.pdf"><!-- -->
-      3/29<!-- --></a><!-- --><br><!-- -><a href=
+      3/29<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0331.pdf"><!-- -->
-      3/31<!-- -></a><!-- --></td>
+      3/31<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=SsSOc1fWUq4">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=C_rRtX1vCM8">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=WsLm9wu8Z3g">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=2l0sH2eT8LI">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Sync. clocks defined, Manchester code, Evolution of Ethernet<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Ethernet oscillographs, PoE variants, Wi-Fi (based on Ethernet)<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Animation: CSMA/CD, Other networks sharing similar protocols<!--end comment--></td>  
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
