Fix a broken link in 304S23PS and typos 	modified:   S23/304/304S23PS.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -135,7 +135,7 @@ DO {
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         Graded<br>auto-<br>matic-<br>ally<br><br>Nothing<br>to<br>return<br><br>
-		<a href="PS_ETHER_key.pdf">Sol'ns</a>
+		<a href="PS_ETHER_Key.pdf">Sol'ns</a>
 		
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Synchronous serial interfacing, Ethernet<br>&nbsp;
