--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -287,7 +287,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=7nqTSdgaWUg">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=JNl47793aJw">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=JNl47793aJw">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->SSB demod via carrier injection (BFO), analytic signals, hearing loop<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #2.</font><!--end comment--><br>
