304, 363 slides, videos for today--363 video is missing, forgot to record today's lecture 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -295,19 +295,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Animation: CSMA/CD, Other networks sharing similar protocols<!--end comment--></td>  
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
-	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  4/03<!-- -></a><!-- --><br><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/258605473/download?download_frd=1"><!-- -->
+	  4/03<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       4/05<!-- -</a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       4/07<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=8U1xwQmcqrc">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Ulx7i3onQpY">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=MgguFFBkb8Q">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Hubs, switches, repeaters, bridges, routers defined; LAN, WAN, WAP<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Project I Report Due Wednesday, 4/05</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--></td>  
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
