--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -294,9 +294,9 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><b>Ch. 4 FM</b>, Intro to FM, How radio signals "look", Comparison, AM vs. FM<!--end comment--></td>  
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0403.pdf"><!-- -->
-	  4/03<!-- -></a><!-- --><br><!-- -<a href=
+	  4/03<!-- --></a><!-- --><br><!-- -<a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0405.pdf"><!-- -->
       4/05<!-- -</a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0407.pdf"><!-- -->
@@ -306,7 +306,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=MgguFFBkb8Q">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Equ'n of angle mod., var defined, FM-PM compared, def. freq., Narrow B<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--></td>  
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
