304, 363 slides and videos for today and 363 video for past Monday, and 363PS11 due date changed from 4/07 to 4/12 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM 	modified:   S23/363/363S23PS.HTM

--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -288,7 +288,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=SsSOc1fWUq4">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=C_rRtX1vCM8">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=2l0sH2eT8LI">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=2l0sH2eT8LI">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Sync. clocks defined, Manchester code, Evolution of Ethernet<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Ethernet oscillographs, PoE variants, Wi-Fi (based on Ethernet)<!--end comment--><br>
@@ -297,18 +297,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0403.pdf"><!-- -->
-	  4/03<!-- --></a><!-- --><br><!-- -<a href=
+	  4/03<!-- --></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0405.pdf"><!-- -->
-      4/05<!-- -</a><!-- --><br><!-- -><a href=
+      4/05<!-- --></a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0407.pdf"><!-- -->
       4/07<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Ulx7i3onQpY">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Ulx7i3onQpY">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=u_M-zRBt19o">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=MgguFFBkb8Q">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Hubs, switches, repeaters, bridges, routers defined; LAN, WAN, WAP<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Project I Report Due Wednesday, 4/05</font><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Ethernet-to-Internet connections on R-pi, client-server <font color=grey>&nbsp; Proj I rept due</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--></td>  
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
