--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -296,18 +296,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/258592002/download?download_frd=1"><!-- -->
-	  4/03<!-- --></a><!-- --><br><!-- -<a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      4/05<!-- -</a><!-- --><br><!-- -><a href=
+	  4/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/259175646/download?download_frd=1"><!-- -->
+      4/05<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       4/07<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=8U1xwQmcqrc">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=dANKYj5RnZ8">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=DUCGWEJjnzc">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=MgguFFBkb8Q">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Equ'n of angle mod., var defined, FM-PM compared, def. freq., Narrow B<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Tx antenna techneques, NBFM via QAM, Wideband &amp; Bessel functions. <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--></td>  
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
