New errata, page 154, Proakis Salehi 2nd 	modified:   errata/Proakis_Salehi/2nd/P_S_2_ER.HTM

--- a/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
+++ b/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
@@ -14,7 +14,7 @@ A:hover {text-decoration:underline;}
 <A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../errata/ERR.htm" 
                        >TEXTBOOK ERRATA</a><br>
-                       (last update 11/16/2020)<br>
+                       (last update 4/07/2023)<br>
                                <br>
       <img src="Proakis_cover_9780133354850.jpg" width="101" height="141" 
               alt="photo of textbook cover"><br><b>
@@ -104,7 +104,16 @@ Page 151-152, Problems 3.1, 3.2, 3.3, 3.5, 3.6.</b><br>
    In each of these problems, when the authors mention, "DSB" 
    they mean, "DSB-SC." <br>
       
-                                       <br><A NAME=ERR_163></A><b>
+                                          <br><A NAME=ERR_154></A><b>
+Page 154, Electronic Edition only:  Problem 3.14.</b><br>
+   In the second line of the problem statement change "180" to "1800."<br>
+   The corrected line is<br> &nbsp; &nbsp; &nbsp;
+      <i>u</i>(<i>t</i>) = 5cos(1800&pi;<i>t</i>) + 20cos(2000&pi;<i>t</i>) + 
+	  5cos(2200&pi;<i></i>t)<br>
+  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <small>
+         (Posted 4/07/2023)</small><br>
+       
+                                          <br><A NAME=ERR_163></A><b>
 Page 163, Figure 4.2</b><br>
    The plot in the row labeled "FM Signal" and in the right-hand 
    half of that row is just plain wrong.  Ignore it.  A corrected
