--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -313,19 +313,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
 	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  4/10<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      4/12<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      4/14<!-- -></a><!-- --></td>
+	  4/10<!-- -></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/259524628/download?download_frd=1"><!-- -->
+      4/12<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/259533388/download?download_frd=1"><!-- -->
+      4/14<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=I-OkHqm48jc">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=G32iUA5Pk9U">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=V836oRdHORs">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=CLEgVpfpQco">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=CbLala1AzHk">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment-->Bessel Fn table, FM B'cast Tx block diagrams, FM B'cast spectrum<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment-->FM B'cast Rx block diagrams, FM demodulators<!--end comment--></td>  
    </TR><!-- Week of 4/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
