Added paper on Covenant's hearing loop to my "CV" 	modified:   CV.HTM 	new file:   INDEX/TheLoop_Voice_v58_Issue2_page5.pdf

--- a/CV.HTM
+++ b/CV.HTM
@@ -700,6 +700,11 @@
 		><!--"http://www.christianengineering.org/publications/cec-proceedings/CEC%202019%20Presentations.zip?attredirects=0&d=1"
 		-->available</a>.  See "Session 5 - DeBoer. . .")</P>
 
+        <P>Riley, Elizabeth; "The Loop: Engineering Project Keeps On Giving" 
+        <a href=
+        "INDEX/TheLoop_Voice_v58_Issue2_page5.pdf"
+		><I>The Voice</I>, Winter/Spring 2013: Volume 58, Issue 2" (2013) page 5</a></P>
+
         <P>D.F. De Boer, "Using Design Hierarchy in Digital Logic 
         to Illustrate the Scientific Method as a Human Invention" 
         <a href=
@@ -851,7 +856,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 2/03/2023)</small></DIV>
+         <small>(This page last updated on 4/13/2023)</small></DIV>
     </TD>
 </TR>
 
