Published solutionss to 363PS#11 and the assignment for 363PS#12 	modified:   S23/363/363S23PS.HTM

--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   4/05/2023 2:50 pm)
+                              >(Last update:   4/15/2023 11:25 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -82,7 +82,32 @@ PS                                                       </small>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+12
 
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/17<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40908790"
+		>4/21</a><br>        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/xxxxxxxxxxxx/download?download_frd=1"
+		>11/28</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Angle modulation basics, FM, PM       <br>&nbsp;
+        Read Ch 3 Sec. 3.2.4, Ch 4 Sec. 4.1            <br>&nbsp;
+		                                               <br>&nbsp;
+        Do<DO>3.17, 4.1, 4.2</DO>                      <br>&nbsp;
+		                                               <br>&nbsp;
+		Note textbook errata on <a href=
+		"https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_163"
+		                      >page 163, Figure 4.2</a></b><br>&nbsp;
+		Note textbook errata in <a href=
+		"https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_182"
+		                       >Problem 4.2</a>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 11
@@ -94,9 +119,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/3642167/assignments/40821623"
 		>4/12</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/190992585/download?download_frd=1"
-		>11/12</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/259720313/download?download_frd=1"
+		>4/15</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
