--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/17/2023 5:10 pm) 
+                              >(Last update: 4/17/2023 5:20 pm) 
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -109,7 +109,12 @@ DO {
 		                                                    <br>&nbsp;
 		Do these problems from your textbook,           <DO><br>&nbsp;
         17.1, 17.3</DO> &nbsp; Both Problems are on page 491.<br>&nbsp;
-        For problem 17.1, Example 17.2 is on page 475.	
+        For problem 17.1, Example 17.2 is on page 475.	    <br>&nbsp;
+		                                                    <br>&nbsp;
+		Hint:  In the state diagram for Problem 17.3 the    <br>&nbsp;
+		open arrows (no labels) pointing into states "A"    <br>&nbsp;
+		and "B" indicate that on power up the state         <br>&nbsp;
+		machine will be in either state at random.
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
