--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -330,18 +330,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0417.pdf"><!-- -->
-	  4/17<!-- --></a><!-- --><br><!-- -><a href=
+	  4/17<!-- --></a><!-- --><br><!-- --><a href=
       "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0419.pdf"><!-- -->
-      4/19<!-- -></a><!-- --><br><!-- -><a href=
+      4/19<!-- --></a><!-- --><br><!-- -><a href=
       "https://ddb.rf.gd/EGR363S23/SLIDES/363S23DN_0412.pdf"><!-- -->
       4/21<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=0Iv6Rabsvv4">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=L-eAgvLZ8Bw">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=yI5uqB2R2-Q">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->On video: review of FM reception.  Slides &amp; video: Intro to noise<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Noise quieting and capture effect for FM and PM, Intro to color theory<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Term Paper Due Friday, 4/21</font><!--end comment--></td>  
    </TR><!-- Week of 4/24 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
