Today's slides and videos 	modified:   S23/304/304S23DN.HTM 	modified:   S23/304/304S23DN_InfinityFree.HTM 	modified:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23DN_InfinityFree.HTM

--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -333,17 +333,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/259796086/download?download_frd=1"><!-- -->
 	  4/17<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/259962047/download?download_frd=1"><!-- -->
-      4/19<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      4/21<!-- -></a><!-- --></td>
+      4/19<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/260102246/download?download_frd=1"><!-- -->
+      4/21<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=tsEwE1AOzOE">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=o26lzpvQdGE">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=vWEtFQFsrDs">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->USB characteristics of the physical layer<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->USB enumeration, packet types, Intro to transmission lines<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->T-lines: Velocity of propagation, reflection coeficcient<!--end comment--></td>  
    </TR><!-- Week of 4/24 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
